==> apache/nuttx/arch/arm/src/nrf53/nrf53_lowputc.c <==
#include <nuttx/config.h>
#include <stdbool.h>
#include <assert.h>
#include "arm_internal.h"
#include "hardware/nrf53_memorymap.h"
#include "hardware/nrf53_uarte.h"
#include "nrf53_config.h"
#include "nrf53_clockconfig.h"
#include "nrf53_gpio.h"
#include "nrf53_lowputc.h"
#include <arch/board/board.h>
#  define CONSOLE_BASE     NRF53_UART0_BASE
#  define CONSOLE_BAUD     CONFIG_UART0_BAUD
#  define CONSOLE_BITS     CONFIG_UART0_BITS
#  define CONSOLE_PARITY   CONFIG_UART0_PARITY
#  define CONSOLE_2STOP    CONFIG_UART0_2STOP
#  define CONSOLE_TX_PIN   BOARD_UART0_TX_PIN
#  define CONSOLE_RX_PIN   BOARD_UART0_RX_PIN
#  define CONSOLE_BASE     NRF53_UART1_BASE
#  define CONSOLE_BAUD     CONFIG_UART1_BAUD
#  define CONSOLE_BITS     CONFIG_UART1_BITS
#  define CONSOLE_PARITY   CONFIG_UART1_PARITY
#  define CONSOLE_2STOP    CONFIG_UART1_2STOP
#  define CONSOLE_TX_PIN   BOARD_UART1_TX_PIN
#  define CONSOLE_RX_PIN   BOARD_UART1_RX_PIN

void nrf53_lowsetup(void)
{
#ifdef HAVE_UART_DEVICE
#ifdef HAVE_UART_CONSOLE
  /* Configure the console UART (if any) */

  nrf53_usart_configure(CONSOLE_BASE, &g_console_config);

#endif /* HAVE_UART_CONSOLE */
#endif /* HAVE_UART_DEVICE */
}

void nrf53_usart_configure(uintptr_t base,
                           const struct uart_config_s *config)
{
  uint32_t pin    = 0;
  uint32_t port   = 0;
  uint32_t regval = 0;

  putreg32(1, base + NRF53_UART_TASKS_STOPRX_OFFSET);
  putreg32(1, base + NRF53_UART_TASKS_STOPTX_OFFSET);
  putreg32(NRF53_UART_ENABLE_DISABLE, base + NRF53_UART_ENABLE_OFFSET);

  /* Set UART format */

  nrf53_usart_setformat(base, config);

  /* Config GPIO pins for uart */

  nrf53_gpio_config(config->txpin);
  nrf53_gpio_config(config->rxpin);

  /* Setect TX pins for UART */

  pin  = GPIO_PIN_DECODE(config->txpin);
  port = GPIO_PORT_DECODE(config->txpin);

  regval = (pin << UART_PSELTXD_PIN_SHIFT);
  regval |= (port << UART_PSELTXD_PORT_SHIFT);
  putreg32(regval, base + NRF53_UART_PSELTXD_OFFSET);

  /* Setect RX pins for UART */

  pin  = GPIO_PIN_DECODE(config->rxpin);
  port = GPIO_PORT_DECODE(config->rxpin);

  regval = (pin << UART_PSELRXD_PIN_SHIFT);
  regval |= (port << UART_PSELRXD_PORT_SHIFT);
  putreg32(regval, base + NRF53_UART_PSELRXD_OFFSET);

  /* Enable UART */

  putreg32(NRF53_UART_ENABLE_ENABLE, base + NRF53_UART_ENABLE_OFFSET);
}

void nrf53_usart_disable(uintptr_t base, const struct uart_config_s *config)
{
  /* Disable interrupts */

  /* Disable the UART */

  putreg32(1, base + NRF53_UART_TASKS_STOPRX_OFFSET);
  putreg32(1, base + NRF53_UART_TASKS_STOPTX_OFFSET);
  putreg32(NRF53_UART_ENABLE_DISABLE, base + NRF53_UART_ENABLE_OFFSET);

  putreg32(0xffffffff, base + NRF53_UART_PSELTXD_OFFSET);
  putreg32(0xffffffff, base + NRF53_UART_PSELRXD_OFFSET);

  /* Unconfigure GPIO */

  nrf53_gpio_unconfig(config->rxpin);
  nrf53_gpio_unconfig(config->txpin);

  /* Deatach TWI from GPIO */

  putreg32(UART_PSELTXD_RESET, base + NRF53_UART_PSELTXD_OFFSET);
  putreg32(UART_PSELRXD_RESET, base + NRF53_UART_PSELRXD_OFFSET);
}
